<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@drawable/fondo"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal">

        <TextView
            style="@style/titulo"
            android:text="@string/app_name"/>

        <Button
            android:id="@+id/un_jugador_id"
            android:text="@string/un_jugador"
            style="@style/boton" />

        <RadioGroup
            android:id="@+id/dificultad_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/facil_id"
                android:text="@string/facil"
                style="@style/boton_radio"/>

            <RadioButton
                android:id="@+id/normal_id"
                android:text="@string/normal"
                android:checked="true"
                style="@style/boton_radio"/>

            <RadioButton
                android:id="@+id/imposible_id"
                android:text="@string/imposible"
                style="@style/boton_radio"/>
        </RadioGroup>

        <Button
            android:id="@+id/dos_jugadores_id"
            android:text="@string/dos_jugadores"
            style="@style/boton" />
    </LinearLayout>

    <Space
        android:layout_width="30dp"
        android:layout_height="0dp" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:rowCount="3">

        <ImageView
            android:id="@+id/casilla_a1"
            android:src="@drawable/cruz"
            style="@style/casillero" />

        <ImageView
            android:id="@+id/casilla_a2"
            style="@style/casillero" />

        <ImageView
            android:id="@+id/casilla_a3"
            android:src="@drawable/circulo"
            style="@style/casillero" />

        <ImageView
            android:id="@+id/casilla_b1"
            style="@style/casillero" />

        <ImageView
            android:id="@+id/casilla_b2"
            android:src="@drawable/cruz"
            style="@style/casillero" />

        <ImageView
            android:id="@+id/casilla_b3"
            style="@style/casillero" />

        <ImageView
            android:id="@+id/casilla_c1"
            android:src="@drawable/circulo"
            style="@style/casillero" />

        <ImageView
            android:id="@+id/casilla_c2"
            style="@style/casillero" />

         <ImageView
            android:id="@+id/casilla_c3"
             android:src="@drawable/cruz"
            style="@style/casillero" />
    </GridLayout>


</LinearLayout>